--- a/TODO
+++ b/TODO
@@ -18,12 +18,13 @@ To do:
        can still interactive move/resize and raise window (no focus) with mouse
    [X] add_window() add AFTER CURRENT client in list
    [X] auto maximize windows
-   [ ] change spawn location of windows (MapRequest?)
+   [X] change spawn location of windows (MapRequest, by virtue of item above)
    [ ] graceful quit WM
    [ ] Alt + r - set current window
    [ ] Alt + m - toggle?
    [ ] maximize mode?
    [ ] signal? why?
    [ ] draw bar on screen
+    [ ] alternative: only draw while holding Alt+Tab
    [ ] custom status text (PropertyNotify?)
    [ ] virtual desktops?
