--- a/TODO
+++ b/TODO
@@ -28,4 +28,5 @@ To do:
     [ ] alternative: only draw while holding Alt+Tab
     [ ] alternative: BYOB
    [ ] custom status text (PropertyNotify?)
-   [ ] virtual desktops?
+   [ ] virtual desktops
+   [ ] change to saner keypress function
