toggle maximize. save old x,y,width,height for clients

--- a/TODO
+++ b/TODO
@@ -29,9 +29,8 @@ To do:
         |--[X] PropertyNotify
         |--[X] get Atoms and stuff
    [X] graceful quit WM
+   [X] Alt + m - toggle. save old x and y
    [ ] BUG: moving windows between desktops crashes drawbar()
-   [ ] If max then no border, else border
-   [ ] Alt + m - toggle? save old x and y
    [ ] transient windows (dialog, popups)
    [ ] maximize mode?
    [ ] signal? why?
