--- a/TODO
+++ b/TODO
@@ -30,7 +30,7 @@ To do:
         |--[X] get Atoms and stuff
    [X] graceful quit WM
    [X] Alt + m - toggle. save old x and y
-   [ ] BUG: moving windows between desktops crashes drawbar()
+   [X] BUG: moving windows between desktops crashes drawbar()
    [ ] transient windows (dialog, popups)
    [ ] maximize mode?
    [ ] signal? why?
