--- a/TODO
+++ b/TODO
@@ -31,5 +31,7 @@ To do:
    [X] graceful quit WM
    [X] Alt + m - toggle. save old x and y
    [X] BUG: moving windows between desktops crashes drawbar()
+   [ ] BUG: new/private firefox windows are misplaced for maximized
+   [ ] prevent moving windows above status bar
    [ ] transient windows (dialog, popups)
-   [ ] maximize mode?
+   [ ] toggle window modes? monocle, floating.
